<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_car_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_is_required"
        android:textColor="#cc2222"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_car_make"
            android:padding="8dp"
            android:text="@string/make" />

        <EditText
            android:id="@+id/edit_car_make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_car_model"
            android:padding="8dp"
            android:text="@string/model" />

        <EditText
            android:id="@+id/edit_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_car_year"
            android:padding="8dp"
            android:text="@string/year" />

        <EditText
            android:id="@+id/edit_car_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_car_license"
            android:padding="8dp"
            android:text="@string/license" />

        <EditText
            android:id="@+id/edit_car_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_car_name"
            android:padding="8dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Data Points"
        android:textSize="20dp"
        android:textColor="@color/textColor"/>


</LinearLayout>